# Starlink-Status

./: CMakeLists.txt  REQUIREMENTS.md  install_dependencies.sh  readme.txt  starlinkstatus.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  starlinkclient.cpp  starlinkclient.h
tests/: mock_dish.py
